<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.caressa.home.viewmodel.DashboardViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <com.caressa.common.view.ArcImageView
                    android:id="@+id/img_forgot_password"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    app:isTemplate="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/img_pw_change"
                    android:tint="@color/vivantGreen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.caressa.common.view.ArcTextView
                    android:id="@+id/lbl_forgot_password"
                    style="@style/VivantTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:text="@string/CHANGE_PASSWORD"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="@+id/img_forgot_password"
                    app:layout_constraintStart_toStartOf="@+id/img_forgot_password"
                    app:layout_constraintTop_toBottomOf="@+id/img_forgot_password"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_forgot_password_desc"
                    style="@style/VivantDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CHANGE_PASSWORD_DESC"
                    android:textColor="@color/vivant_charcoal_grey"
                    android:textSize="@dimen/_13sdp"
                    android:gravity="center"
                    android:alpha="0.8"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_forgot_password"
                    app:layout_constraintEnd_toEndOf="@+id/lbl_forgot_password"
                    app:layout_constraintStart_toStartOf="@+id/lbl_forgot_password"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_edt_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/lbl_forgot_password_desc"
                    app:layout_constraintStart_toStartOf="@+id/lbl_forgot_password_desc"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_forgot_password_desc">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_old_password"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        app:srcCompat="@drawable/img_old_pw"
                        app:tint="@color/vivant_questionsteel_grey"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/til_edt_old_password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_edt_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/security_grey_light"
                        app:hintEnabled="false"
                        style="@style/VivantTextInputLayoutStyle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_old_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/VivantEditTextStyle"
                            android:hint="@string/OLD_PASSWORD"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="30"
                            android:paddingStart="@dimen/_40sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_15sdp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_edt_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/layout_edt_old_password"
                    app:layout_constraintStart_toStartOf="@+id/layout_edt_old_password"
                    app:layout_constraintTop_toBottomOf="@+id/layout_edt_old_password">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_new_password"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:srcCompat="@drawable/img_new_pw"
                        app:tint="@color/vivant_questionsteel_grey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/til_edt_new_password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_edt_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/security_grey_light"
                        app:hintEnabled="false"
                        style="@style/VivantTextInputLayoutStyle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/VivantEditTextStyle"
                            android:hint="@string/NEW_PASSWORD"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="30"
                            android:paddingStart="@dimen/_40sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_15sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/layout_edt_new_password"
                    app:layout_constraintStart_toStartOf="@+id/layout_edt_new_password"
                    app:layout_constraintTop_toBottomOf="@+id/layout_edt_new_password">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_confirm_password"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:srcCompat="@drawable/img_confirm_pw"
                        app:tint="@color/vivant_questionsteel_grey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/til_edt_confirm_password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/security_grey_light"
                        app:hintEnabled="false"
                        style="@style/VivantTextInputLayoutStyle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_confirm_password"
                            style="@style/VivantEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/CONFIRM_PASSWORD"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="30"
                            android:paddingStart="@dimen/_40sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_15sdp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.caressa.common.view.ArcButton
                    android:id="@+id/btn_change_password"
                    android:layout_width="0dp"
                    style="@style/CustomButton"
                    app:isTemplate="true"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_1sdp"
                    android:text="@string/CHANGE_PASSWORD"
                    app:layout_constraintEnd_toEndOf="@+id/layout_edt_confirm_password"
                    app:layout_constraintStart_toStartOf="@+id/layout_edt_confirm_password"
                    app:layout_constraintTop_toBottomOf="@+id/layout_edt_confirm_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>